example/01-fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        percentage:
          value: 0.1
        fixedDelay: 5s
      abort:
        percentage:
          value: 5 # Abort percentage
        httpStatus: 500 # HTTP status to abort
    route:
    - destination:
        host: ratings
        subset: v1
